<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.akeso.akesobandreader.MainActivity">
    <TextView
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/waiting"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        android:gravity="center"/>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="558dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/main">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="1">

                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/name"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/allergies"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/allergies"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/allergies1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/conditions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/conditions"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/conditions1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/medications"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/medications"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/medications1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/contact"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/contact1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/contact2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/insurance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/insurance"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/insurance1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/insurance0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/insuranceid"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/insurance2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/notes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text="@string/notes"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow android:gravity="center">

                    <TextView
                        android:id="@+id/notes1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="3dip"
                        android:text=""
                        android:textAppearance="@android:style/TextAppearance.Material.Large" />
                </TableRow>

                <TableRow android:gravity="center">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorAccent"
                        android:onClick="toClear"
                        android:text="@string/Clear" />

                </TableRow>

            </TableLayout>


        </RelativeLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>
